syntax = "proto3";

package iunite.club.srv.core.approved;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "iunite.club/services/user/proto/user.proto";

service Approved {
  rpc List(ListRequest) returns(ListResponse) {}
  rpc ListV2(ListV2Request) returns(ListResponse) {}
  rpc ListByPusher(ListByPusherRequest) returns(ListResponse) {}
  rpc WaitingExecuteList(ListByCountRequest) returns(ListResponse) {}
  rpc Details(DetailsRequest) returns (ApprovedResponse) {}
  rpc DetailsByContentID(DetailsRequest) returns (ApprovedResponse) {}
  rpc Execute(ExecuteRequest) returns (Response) {}
  rpc Create(CreateRequest) returns (ApprovedResponse) {}
  rpc ListActivity(ListActivityRequest) returns(ListResponse) {}
  rpc PublishActivity(PublishActivityRequest) returns(Response) {}
  rpc DismissActivity(DismissActivityRequest) returns(Response) {}
}

message PublishActivityRequest {
  string ID = 1;
}

message DismissActivityRequest {
  string ID = 1;
}

message ListActivityRequest {
  int64 Page = 1;
  int64 Limit = 2;
  string Kind = 3;
  string ClubID = 4;
  string UserID = 5;
}

message CreateRequest {
  string Title = 1;
  string Kind = 2;
  string Summary = 3;
  string Status = 4;
  string Description = 5;
  google.protobuf.Struct Content = 6;
  repeated string ApprovedUsers = 7;
  repeated string CopyUsers = 8;
  string ClubID = 9;
  string CreatorID = 10;
  string DepartmentID = 11;
}

message ApprovedResponse {
  ApprovedPB Approved = 1;
  bool OK = 2;
}

message Response {
  bool OK = 1;
}

message ApprovedPB {
  string ID = 1;
  string Title = 2;
  string Kind = 3;
  string Summary = 4;
  string Status = 5;
  string Description = 6;
  google.protobuf.Struct Content = 7;
  repeated ApprovedFlowPB Flows = 8;
  google.protobuf.Timestamp CreatedAt = 9;
  google.protobuf.Timestamp UpdatedAt = 10;
  string ClubID = 11;
  iunite.club.srv.user.User Pusher = 12;
}

message ApprovedFlowPB {
  string ID = 1;
  string Kind = 2;
  string Options = 3;
  string HandlerID = 4;
  int32 Status = 5;
  int32 Sort = 6;
  string ApprovedID = 7;
  google.protobuf.Timestamp CreatedAt = 8;
  google.protobuf.Timestamp UpdatedAt = 9;
  iunite.club.srv.user.User Handler = 10;
}

message ListResponse {
  repeated ApprovedPB Approveds = 1;
  int64 Total = 2;
}

message ListRequest {
  string ClubID = 1;
  string Kind = 2;
  string Status = 3;
  string Search = 4;
  int64 Page = 5;
  int64 Limit = 6;
  string HandlerID = 7; 
}

message ListV2Request {
  string ClubID = 1;
  string FlowStatus = 3; // pending / finished / copy
  string ReadState = 4; // unread / alread
  string Search = 5;
  int64 Page = 6;
  int64 Limit = 7;
  string HandlerID = 8; 
}

message ListByPusherRequest {
  int64 Page = 1;
  int64 Limit = 2;
  string UserID = 3;
  string Search = 4;
  string ClubID = 5;
}

message ListByCountRequest {
  int64 Count = 1;
}

message DetailsRequest {
  string ID = 1;
}

message ExecuteRequest {
  string ID = 1;
  bool Result = 2;
  string Options = 3;
  string UserID = 4;
  string ClubID = 5;
}